tests/specs/ecosystem/kwhinnery/animals/0_0_15.test
kwhinnery/animals/0.0.15
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2307 [ERROR]: Cannot find module 'file://<tmpdir>/dist/animal.js'.
    at file://<tmpdir>/dist/mod.d.ts:1:15

TS2307 [ERROR]: Cannot find module 'file://<tmpdir>/dist/cat.js'.
    at file://<tmpdir>/dist/mod.d.ts:2:15

TS2307 [ERROR]: Cannot find module 'file://<tmpdir>/dist/dog.js'.
    at file://<tmpdir>/dist/mod.d.ts:3:15

Found 3 errors.

